[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/WeightRack.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound/weight_dropped.ogg" type="AudioStream" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CylinderShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0.94902, 0.713726, 0.0901961, 1 )

[node name="WeightRack" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.439849, 0, 0, 0, 0.057951, 0, 0, 0, 0.439849, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="ClickArea" type="Area" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/ClickArea"]
transform = Transform( 1, 0, 0, 0, 1.03381, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Outline" type="MeshInstance" parent="."]
transform = Transform( 0.476449, 0, 0, 0, 0.0300603, 0, 0, 0, 0.476449, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="ClickArea" type="Area" parent="Outline"]

[node name="CollisionShape" type="CollisionShape" parent="Outline/ClickArea"]
transform = Transform( 1, 0, 0, 0, 1.03381, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="WeightDropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="input_event" from="MeshInstance/ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="MeshInstance/ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance/ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="input_event" from="Outline/ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="Outline/ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="Outline/ClickArea" to="." method="_on_ClickArea_mouse_exited"]
